# DYTurbo

./: .gitattributes  .gitignore  .gitlab-ci.yml  .ycm_extra_conf.py  Makefile.am  README.md  configure.ac  dyturbo-config.in  hello.cxx  install-ceres  install-chaplin  install-cuba  install-cubature  install-lhapdf  pdfsets.list  setup
ancont/: Makefile.am  README.md  ancont.f
bequad/: Makefile.am  README  bequad.C  bequad.h  dOPbess.f
besche/: Makefile.am  README  besche.f  besche_interface.h  fft.f  test.f
bessel/: 588.f  588_interface.h  Makefile.am  hankel.C  hankel.h  readme.md
born/: Makefile.am  loint.C  lomellin.C  lomellin.h
cernlib/: Makefile.am
counterterm/: Makefile.am  countint.f  ctint.C  ctint.f  ctint.h  ctmellin.C  ctmellin.h  itilde.C  itilde.h  largelogs_inc.f  qtint.C  qtint.h  xmio_inc.f
cuba/: Makefile.am
cubature/: Makefile.am  README.md
dequad/: Makefile.am  README.md  intde1.doc  intde1.f  intde1t.c  intde1t.f  intde2.doc  intde2_c.c  intde2_c.h  intde2t.c  intde2t.f
doxy/: Doxyfile
dynnlo/: Makefile.am  dynnlo_interface.h  genBORN2.f  lowintHst.f  myli3new.f
dyqt/: Makefile.am  README.md  flavour.f  fodyqt.f  functions.f
dyres/: Makefile.am  README.md  a06.f  alfamz.f  anom.f  besselkfast.f  breitw.f  const.h  constants.f  countDYnew-RES.f  countdy.f  coupling.f  couplz.f  csection.f  cuts.f  dipolescale.f  dipolesub.f  dyinit.f  dyres_interface.C  dyres_interface.h  evtwriter.f  gauss.f  gauss.inc  gen3.f  gen4MIO.f  genBORN2qT.f  includedipole.f  integration.f  isolation.f  limits.f  lowint_incldip.f  main2.f  masscuts.f  masses.f  mdata.f  mellinh2.f  mellinquad.inc  myli2.f  pdfmoments.f  pdfset_lhapdf.f  (+19 more)
eba/: Makefile.am  README.md  loint.C  loint.h
garbage/: a09.f  cuts.f  dyinit.f  genclust2.f  genclust_cone.f  genclust_kt.f  intde2.f  lowintHst-RES.f  mbook.f  miscclust.f  pdfiset.f  ptyrap.f  r.f  realvirt2.f  setup-RES.f
gonsalves/: Cteq61Pdf.f  README.md  alphas.f  cteq.f  dopden.f  ehlq.f  mrs.f  mrst.f  mrst2001lo.f  mrst2002.f  qt.f  qt.inp  vegas.f
harmonicsums/: HS.f  HSpart.f  Makefile.am  README.md  (+245 more)
histo/: HistoBase.h  HistoBook.h  HistoHandler.cxx  HistoHandler.h  HistoObjects.cxx  HistoObjects.h  HistoObjectsROOT.h  HistoObjectsSTL.h  HistoSpecialization.h  HistoSvc.h  KinUtils.h  KinematicCuts.h  KinematicDefinitions.h  Kinematics.cxx  Kinematics.h  Makefile.am  TurboHist.cxx  TurboHist.h  TurboHist_Binning.h  TurboHist_Counter.h  TurboHist_File.h  TurboHist_H1.h  TurboHist_H2.h  TurboHist_H3.h  TurboHist_HBase.h  TurboHist_P1.h  TurboHist_P2.h  dyturbo-hadd.C
mcfm/: Makefile.am  README.md  TODO.md  alfamz_lhapdf.f  branch.f  ckm.f  constants.f  coupling.f  ddilog.f  dipoles.f  dipolesub.f  dynamicscale.f  facscale.f  gen3.f  includedipole.f  masscuts.f  masses.f  mcfm_interface.C  mcfm_interface.h  phase3.f  phasemin.f  phi1_2m.f  phi3m0.f  ptilde.f  qcdcouple.f  qqb_w.f  qqb_w1jet_v.f  qqb_w2jet.f  qqb_w_g.f  qqb_w_gvec.f  qqb_z.f  qqb_z1jet.f  qqb_z1jet_gs.f  qqb_z1jet_v.f  qqb_z2jet.f  qqb_z_g.f  qqb_z_gvec.f  scale.f  scaleset.f  smalls.f  (+4 more)
origdyres/: Makefile.am  dyrestest.C  install-dyres
origdyres/input/: wp.in
pegasus/: AUTHOR  Makefile.am  ans2mom.f  asg2mom.f  asrgkt.f  betafct.f  const_inc.f  dimensions.f  dyevnffn.f  ens1n.f  ens2n.f  ensg0n.f  esg1n.f  esg2n.f  evnasthr.f  evnffn.f  evnfthr.f  evnvfn.f  lsgmom.f  moms_inc.f  pns1mom.f  pns2mold.f  pns2mom.f  pnsg0mom.f  pnsg_inc.f  psg0pmom.f  psg1mom.f  psg2mom.f  psifcts.f  uns2mom.f  usg1hmom.f  usg1mom.f  usg2hmom.f  usg2mom.f
pegasus/Pegasus/: CODE.INF  G77-mom  G77-pol  G77-tab  G77-time  IFC-time  LICENCE  README  evolmom.f  evolpol.f  evoltime.f  lh01tab.f  usrinit.f  usrinp.f  usrpinit.f  usrpinp.f
pegasus/Pegasus/Routines/: G77-obj  IFC-obj  ans2mom.f  ans2pmom.f  asg2mom.f  asg2pmom.f  asmatch.f  betafct.f  ebetafct.f  ens2n.f  ensg0n.f  esg2n.f  evnfthr.f  initevol.f  initinp.f  initmom.f  initpinp.f  initpol.f  inplmom1.f  inplmom2.f  inppmom1.f  inppmom2.f  nparton.f  pns1pmom.f  pns2mold.f  pns2mom.f  psg1mom.f  psg1pmom.f  psg2mold.f  usg1hmom.f  usg1mom.f  usg2hmom.f  usg2mom.f  xparton.f
phasespace/: Makefile.am  README.md  boostV.f  dyboost.f  dygen3.f  dygen4.f  dyspinoru.f  gen4p.C  genp.f  mweight.f  phasespace.h  psbin.C  psgen.C  psset.C  qtweight.f  rotate.f
resum/: Makefile.am  README.md  alphas.C  alphas.h  anomalous.C  anomalous.h  bessel.f  besselint.C  besselint.h  blim.C  blim.h  ccoeff.C  ccoeff.h  cmom.C  cmom.h  dymellinh2.f  evolnative.C  evolnative.h  evolnum.C  evolnum.h  expc.C  expc.h  gaussrules.C  gaussrules.h  gint.C  gint.h  hcoeff.C  hcoeff.h  hcoeff_check.C  hcoeff_check.h  hcoefficients.C  hcoefficients.h  icoeff.C  icoeff.h  ifunc.C  ifunc.h  melfun.C  melfun.h  mellinint.C  mellinint.h  (+26 more)
src/: AiMoments.cxx  AiMoments.h  Makefile.am  TLVUtils.cxx  TLVUtils.h  abint.C  abint.h  banner.C  banner.h  bornintegr.C  bornintegr.h  cerespdf.C  cerespdf.h  chaplin.f  chebyshev.C  chebyshev.h  clenshawcurtisrules.C  clenshawcurtisrules.h  clock_real.C  clock_real.h  codata.C  codata.h  constants.C  constants.h  coupling.C  coupling.h  ctintegr.C  ctintegr.h  cubacall.C  cubacall.h  cuts.C  cuts.h  ddilog.f  dyct.C  dyct.h  dyfast.C  dyfin.C  dyrealvirt.C  dytests.C  dyturbo.C  (+60 more)
test/: .gitignore  Cuts_unittest.cxx  DYTurboBase_unittest.cxx  DYTurbo_unittest.cxx  HistoHandlerROOT_unittest.cxx  HistoHandlerSTL_unittest.cxx  HistoHandler_unittest.cxx  Kinematics_unittest.cxx  Makefile.am  TurboHist_unittest.cxx  dytests.C  filecheck.res  filecheck_cuts.res  finitemapping.C  integration.res  integration_cuts.res  lines.C  old_cuts.C  old_cuts.h  old_kinem.C  old_plotter.C  old_plotter.h  points.C  terms.res  terms_cut.res
v2j/: Makefile.am  v2jint.f
vjet/: Makefile.am  abcdefunc.f  delta.C  dyqcd.f  fodyqt_inc.f  functions_inc.f  luminosities_inc.f  luminosity.C  luminosity.h  scales2_inc.f  sing.C  utils.f  vjint.C  vjint.h  vjloint.C  vjloint.h
vjfo/: Makefile.am  fodyqt_inc.f  internal_inc.f  luminosities_inc.f  luminosity.C  sing.C  vjfo.f  vjint.C  vjint.h  vjloint.C  vjloint.h
(+91 files in other folders)
