AUTOMAKE_OPTIONS = foreign
noinst_LTLIBRARIES = libcern.la
libcern_la_SOURCES = intrac.F   mnbins.F  mncomd.F  mncuve.F  mnemat.F  mnexin.F  mnhelp.F  mninex.F  mnlims.F  mnmnos.F  mnpfit.F  mnprin.F  mnrn15.F  mnseek.F  mnstat.F  mnvers.F  stand.F minuit     mncalf.F  mncont.F  mnderi.F  mnerrs.F  mnfixp.F  mnhes1.F  mninit.F  mnline.F  mnmnot.F  mnpint.F  mnpsdf.F  mnrset.F  mnset.F   mnstin.F  mnvert.F missing.F  mncler.F  mncrck.F  mndxdi.F  mneval.F  mnfree.F  mnhess.F  mninpu.F  mnmatu.F  mnparm.F  mnplot.F  mnrazz.F  mnsave.F  mnseti.F  mntiny.F  mnwarn.F mnamin.F   mncntr.F  mncros.F  mneig.F   mnexcm.F  mngrad.F  mnimpr.F  mnintr.F  mnmigr.F  mnpars.F  mnpout.F  mnread.F  mnscan.F  mnsimp.F  mnunpt.F  mnwerr.F
