AUTOMAKE_OPTIONS = foreign

AM_FFLAGS = -I$(srcdir)/../mcfm -I$(srcdir)/../src

noinst_LTLIBRARIES = libdyres.la
libdyres_la_SOURCES = varios.f csection.f integration.f mellinh2.f strcat.f resinit.f besselkfast.f countDYnew-RES.f gen4MIO.f smalls.f includedipole.f scaleset.f myli2.f genBORN2qT.f spinoru.f virt5.f r.f zeromsq.f storeptilde.f

pkginclude_HEADERS = const.h realonly.f removebr.f rescoeff.f scale.f scales.h scheme.f sprods_com.f vegas_common.f virtonly.f zcouple.f zerowidth.f zprods_com.f zprods_decl.f
