AUTOMAKE_OPTIONS = foreign

AM_FFLAGS = -I$(srcdir)/../mcfm -I$(srcdir)/../src

noinst_LTLIBRARIES = libdyres.la
libdyres_la_SOURCES = varios.f csection.f integration.f mellinh2.f resinit.f besselkfast.f countDYnew-RES.f gen4MIO.f myli2.f genBORN2qT.f #anom.f

pkginclude_HEADERS = const.h rescoeff.f scales.h
