AUTOMAKE_OPTIONS = foreign

AM_FFLAGS = -I$(srcdir)/../dyres -I$(srcdir)/../src

noinst_LTLIBRARIES = libmcfm.la

#original files
libmcfm_la_SOURCES = qqb_w1jet_gs.f  qqb_w1jet_v.f  qqb_w1jet_z.f  qqb_w2jet.f  qqb_z1jet.f  qqb_z1jet_gs.f  qqb_z1jet_v.f  qqb_z1jet_z.f  qqb_z2jet.f z2jetsq.f w2jetsq.f A51.f A52.f A5NLO.f ampqqb_qqb.f aqqb_zbb.f boost.f branch.f breitw.f ckmfill.f lfunctions.f dclaus.f i3m.f transform.f ddilog.f lnrat.f dipoles.f dot.f dotem.f gen3.f getptildejet.f masscuts.f storecsz.f phase4.f phase3.f subqcd.f phi1_2m.f phi1_2.f phi3m0.f qqb_w_g.f qqb_w.f qqb_w_gvec.f qqb_z.f qqb_z_gvec.f qqb_z_g.f scaleset.f smalls.f spinoru.f virt5.f includedipole.f zeromsq.f storeptilde.f newton1.f

#modified files
libmcfm_la_SOURCES +=  alfamz_lhapdf.f dipolesub.f 

pkginclude_HEADERS = agq.f alfacut.f b0.f ckm.f ckm1.f constants.f cutoff.f dipolescale.f dynamicscale.f efficiency.f epinv2.f epinv.f ewcharge.f ewcouple.f ewinput.f facscale.f flags.f gridinfo.f lhapdf.f lc.f limits.f jetcuts.f masses.f jetlabel.f msq_cs.f mmsq_cs.f mxdim.f noglue.f npart.f nwz.f phasemin.f PR_cs_new.f PR_new.f process.f ptilde.f qcdcouple.f qqgg.f removebr.f scale.f sprods_com.f zcouple.f scheme.f vegas_common.f zerowidth.f zprods_com.f zprods_decl.f
