AUTOMAKE_OPTIONS = foreign

noinst_LTLIBRARIES = libpegasus.la
libpegasus_la_SOURCES = ans2mom.f  asg2mom.f  asrgkt.f  lsgmom.f  pns1mom.f  pns2mold.f  psg1mom.f  psg2mom.f  psifcts.f  uns2mom.f  usg1hmom.f  usg2hmom.f  usg2mom.f psg0pmom.f  usg1mom.f  pnsg0mom.f betafct.f evnffn.f evnvfn.f ens2n.f ensg0n.f evnfthr.f asmatch.f esg1n.f esg2n.f ens1n.f dyevnffn.f

#pkginclude_HEADERS = 
