AUTOMAKE_OPTIONS = foreign

AM_FFLAGS = -std=legacy

noinst_LTLIBRARIES = libpegasus.la
#changed from pns2mold.f to pns2mom.f
libpegasus_la_SOURCES = ans2mom.f  asg2mom.f asg2mom_form.f  asrgkt.f  lsgmom.f  pns1mom.f  pns2mom.f  psg1mom.f  psg2mom.f  psifcts.f  uns2mom.f  usg1hmom.f  usg2hmom.f  usg2mom.f  usg1mom.f  pnsg0mom.f betafct.f evnffn.f evnvfn.f ens2n.f ensg0n.f evnfthr.f evnasthr.f asmatch.f esg1n.f esg2n.f ens1n.f dyevnffn.f

pkginclude_HEADERS = pnsg_inc.f dimensions.f
